@@ -50,7 +50,7 @@ and 'a pattern_data =
     pat_loc: Location.t;
     pat_extra : (pat_extra * Location.t * attributes) list;
     pat_type: type_expr;
-    mutable pat_env: Env.t;
+    pat_env: Env.t;
     pat_attributes: attributes;
    }
 
@@ -779,6 +779,11 @@ val iter_pattern: (pattern -> unit) -> pattern -> unit
 type pattern_predicate = { f : 'k . 'k general_pattern -> bool }
 val exists_general_pattern: pattern_predicate -> 'k general_pattern -> bool
 val exists_pattern: (pattern -> bool) -> pattern -> bool
+
+(** bottom-up mapping of patterns: the transformation function is
+    called on the children before being called on the parent *)
+val map_general_pattern:
+  pattern_transformation -> 'k general_pattern -> 'k general_pattern
 
 val let_bound_idents: value_binding list -> Ident.t list
 val let_bound_idents_full:
